# rusfun

./: Cargo.toml  README.md
benches/: quick_benchmark.rs
examples/: cosData.xye  fitLinearData.py  fitParabolaData.py  genCosData.py  genLinearData.py  genParabolaData.py  genSqrtData.py  linearData.xye  linearDataNoErrorbars.xye  parabolaData.xye
sample_data/: gaussianData.xye
src/: curve_fit.rs  func1d.rs  lib.rs  lm.rs  main.rs  size_distribution.rs  standard.rs  utils.rs  wasm.rs
src/sas/: cube.rs  mod.rs  sphere.rs
