[package]
name = "rusfun"
version = "0.3.1"
authors = ["DomiDre <homiedomi@gmail.com>"]
edition = "2018"
description = "Little experimental crate to fit simple models to data via WASM in the browser"
repository = "https://github.com/domidre/rusfun"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ndarray = "0.12.1"
gauss-quad = "0.1.2"
wasm-bindgen = "0.2.49"
criterion = "0.2"

[[bench]]
name = "quick_benchmark"
harness = false