[package]
name = "rusfun"
version = "0.3.2"
authors = ["DomiDre <dominiquedresen@gmail.com>"]
edition = "2018"
description = "Little experimental crate to fit simple models to data via WASM in the browser"
repository = "https://github.com/domidre/rusfun"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
ndarray = "0.13"
gauss-quad = "0.1"
wasm-bindgen = "0.2"
criterion = "0.3"
console_error_panic_hook = "0.1.6"

[[bench]]
name = "quick_benchmark"
harness = false
